export interface Robot {
  code?: string;
  name?: string;
  robotTypeId?: string;
  number?: string;
  status?: boolean;
  description?: string
}
