export interface RobotType {
  type?: string;
  brand?: string;
  model?: string;
  possibleTasks?: string[]
}
