@startuml
'https://plantuml.com/class-diagram

hide methods
hide circles


frame BUILDINGS{
  class Building{
    code
    name
    description
  }

  class BuildingId

  Building "1" --> "1" BuildingId

}

frame FLOORS{
  class Floor{
    number
    description
  }

  class FloorId

  Floor "1" --> "1" FloorId
}

frame ROOMS{
  class Room{
    code
    category
    description
  }

  class RoomId

  Room "1" --> "1" RoomId
}

frame ROBOTS{
  class RobotType{
    designation
    availableTasks
  }

  class Robot{
    serialNumber
    code
    nickname
  }
}


Robot "*" ---> "1" RobotType

BuildingConnection "*" ---> "1" Floor

BuildingConnection "*" ---> "1" Floor


Building "1" ---> "1" Elevator
Building "1" <--- "*" Floor
Floor "1" <--- "*" Room




@enduml